# scholarbridge

./: .env.example  .env.production.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RESTART.md  RESTART_PROMPT.txt  SECURITY.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  db_safety.py  extensions.py
deploy/: gunicorn.conf.py  nginx-scholarbridge.conf  rsync-exclude.txt  runtime-assets-lib.sh  runtime-assets.txt  scholarbridge.service
docs/: authentication_v1.md  developer.md  docxToTexTemplate.txt  domain_model.md  governance_and_operations.md  roadmap.md  schema_draft.md  schema_v1.md  solicitation_v1.md  terminology.md  ui_concepts.md  vision.md  workflow.md  workflowAccessSummary.txt  workflow_v1.md
scripts/: analyze_spreadsheet.py  backup_postgres.sh  copy_production_db_to_local.sh  deploy_via_ssh.sh  deploy_via_ssh.sh.orig  dev_cycle.sh  export_partners.py  export_people.py  import_partners.py  import_people.py  import_vendors.py  migrate_sqlite_to_postgres.py  rebuild_db.sh  render_campaign_by_partner_proof.py  restore_postgres.sh  run_tests.sh  start_local_dev.sh  sync_runtime_assets.sh
tests/: test_acknowledgement_letter_service.py  test_dashboard_stats.py  test_dashboard_ui.py  test_db_safety.py  test_formatters.py  test_letters_queue.py  test_partner_list_ui.py  test_reports.py  test_runtime_asset_manifest.sh  test_solicitation_delete.py  test_solicitation_letter_service.py  test_solicitation_list_ui.py  test_solicitation_primary_contact.py  test_solicitation_status_date.py  test_status.py
(+79 files in other folders)
