[project]
name = "scholarbridge"
version = "0.1.0"
description = "ScholarBridge Flask scaffolding"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0,<4.0",
    "flask-login>=0.6.3,<1.0",
    "flask-migrate>=4.0.7,<5.0",
    "flask-sqlalchemy>=3.1.1,<4.0",
    "gunicorn>=26.0.0",
    "openpyxl>=3.1.5,<4.0",
    "pandas>=2.2.3,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv>=1.0.1,<2.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
